--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.14) UNRELEASED; urgency=medium
+
+  * dh-make-ruby: fix conversion of gem names with uppercase characters into
+    debian package names
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 10 Apr 2015 10:49:34 +0200
+
 gem2deb (0.13) experimental; urgency=medium
 
   [ Antonio Terceiro ]
