--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 gem2deb (0.17) UNRELEASED; urgency=medium
 
-  * dh-make-ruby: fix call to wrap-and-sort
-  * dh-make-ruby: add -w/--overwrite option to overwrite files under debian/
-  * dh-make-ruby: only call wrap-and-sort if either there was no previous
-    packaging, or -w/--overwrite was passed.
-  * dh-make-ruby: when acting on an existing source package, read the source
-    package name from debian/changelog.
+  * dh-make-ruby:
+    - fix call to wrap-and-sort
+    - add -w/--overwrite option to overwrite files under debian/
+    - only call wrap-and-sort if either there was no previous
+      packaging, or -w/--overwrite was passed.
+    - when acting on an existing source package, read the source package name
+      from debian/changelog.
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 16 May 2015 22:51:18 -0300
 
