--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ gem2deb (0.17) UNRELEASED; urgency=medium
       the Rubygems metadata, not as declared in debian/control) before running
       the tests (Closes: #785120, #785120)
     - always print command lines used to run the tests
+    - add support for passing options via the GEM2DEB_TEST_RUNNER environment
+      variable
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 16 May 2015 22:51:18 -0300
 
