--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.17) UNRELEASED; urgency=medium
+gem2deb (0.17~git201505171000560300) UNRELEASED; urgency=medium
 
   * dh-make-ruby:
     - fix call to wrap-and-sort
