--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ gem2deb (0.17) UNRELEASED; urgency=medium
     - add support for passing options via the GEM2DEB_TEST_RUNNER environment
       variable
     - add support for checking Rubygems dependencies during build
+    - Breaks:/Replaces: gem2deb (<< 0.17~) because lib/gem2deb/metadata.rb was
+      moved from gem2deb to gem2deb-test-runner.
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 16 May 2015 22:51:18 -0300
 
