--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.18) UNRELEASED; urgency=medium
+
+  * make dh-make-ruby resilient against a corrupt "gem name to package name"
+    cache (Closes: #786841)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 11:04:47 -0300
+
 gem2deb (0.17) unstable; urgency=medium
 
   * dh-make-ruby:
