--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.18) UNRELEASED; urgency=medium
 
   * make dh-make-ruby resilient against a corrupt "gem name to package name"
     cache (Closes: #786841)
+  * dh_ruby: install gemspecs _before_ running tests so that checking
+    dependencies when running tests actually works.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 11:04:47 -0300
 
