--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.19) UNRELEASED; urgency=medium
+
+  * gem2deb-test-runner: include `Gem.path` in GEM_PATH so that dependency
+    checking works against the system-installed gemspecs.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 22:35:37 -0300
+
 gem2deb (0.18) unstable; urgency=medium
 
   * make dh-make-ruby resilient against a corrupt "gem name to package name"
