--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ gem2deb (0.18.2) UNRELEASED; urgency=medium
     converting gem names to source package names (not just the first one).
   * dh_ruby: install gemspecs to rubygems-integration directories using
     API_VERSION (e.g. 2.2.0) and not the short version (e.g. 2.2)
+  * dh-make-ruby: avoid converting gem dependencies on exact versions
+    (= 0.1.2) to Debian; that is never going to work.
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 13 Jun 2015 12:13:45 -0300
 
