--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.18.2) UNRELEASED; urgency=medium
+gem2deb (0.18.2) unstable; urgency=medium
 
   * gem2deb-test-runner: when under autopkgtest, don't pass any GEM_PATH at
     all, no even an empty one. This fixes dependency checks under autopkgtest.
@@ -9,7 +9,7 @@ gem2deb (0.18.2) UNRELEASED; urgency=medium
   * dh-make-ruby: avoid converting gem dependencies on exact versions
     (= 0.1.2) to Debian; that is never going to work.
 
- -- Antonio Terceiro <terceiro@debian.org>  Sat, 13 Jun 2015 12:13:45 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 17 Jun 2015 19:40:18 -0300
 
 gem2deb (0.18.1) unstable; urgency=medium
 
