--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+gem2deb (0.18.3) UNRELEASED; urgency=medium
+
+  * gem2deb-test-runner: add dependency on ruby-test-unit
+    - Ruby 2.1 had an embedded copy of test/unit, so packages using it in
+      their test suite got away with not build-depending on ruby-test-unit
+    - Ruby 2.2 does not include test/unit anymore, so a few dozens of packages
+      now FTBFS. Since we have a transition to make, instead of waiting for
+      all those packages to be fixed, let's workaround that centrally here.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Mon, 22 Jun 2015 18:45:49 -0300
+
 gem2deb (0.18.2) unstable; urgency=medium
 
   * gem2deb-test-runner: when under autopkgtest, don't pass any GEM_PATH at
