--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.18.3) UNRELEASED; urgency=medium
+gem2deb (0.18.3) unstable; urgency=medium
 
   * gem2deb-test-runner: add dependency on ruby-test-unit
     - Ruby 2.1 had an embedded copy of test/unit, so packages using it in
@@ -7,7 +7,7 @@ gem2deb (0.18.3) UNRELEASED; urgency=medium
       now FTBFS. Since we have a transition to make, instead of waiting for
       all those packages to be fixed, let's workaround that centrally here.
 
- -- Antonio Terceiro <terceiro@debian.org>  Mon, 22 Jun 2015 18:45:49 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 23 Jun 2015 20:37:54 -0300
 
 gem2deb (0.18.2) unstable; urgency=medium
 
