--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gem2deb (0.18.4) UNRELEASED; urgency=medium
 
   * gem2deb: download .gem files in a temporary directory
+  * gem2deb-test-runner: add dependency on ruby-minitest
 
  -- Antonio Terceiro <terceiro@debian.org>  Wed, 24 Jun 2015 17:23:08 -0300
 
