--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ gem2deb (0.19) UNRELEASED; urgency=medium
 
   * gem2deb: download .gem files in a temporary directory
   * gem2deb-test-runner: add dependency on ruby-minitest
+  * dh-make-ruby: add README's uncommented to debian/ruby-foo.docs
 
  -- Antonio Terceiro <terceiro@debian.org>  Wed, 24 Jun 2015 17:23:08 -0300
 
