--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.20) UNRELEASED; urgency=medium
 
   * gem2deb-test-runner: when checking dependencies, don't add
     rubygems-integration paths from different Ruby versions to GEM_PATH.
+  * gem2deb/rake/testtask: Use options to make all test runs verbose by
+    default
 
  -- Antonio Terceiro <terceiro@debian.org>  Mon, 20 Jul 2015 23:12:27 -0300
 
