--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gem2deb (0.21) UNRELEASED; urgency=medium
   * gem2deb-test-runner:
     - use the API version number to point to rubygems-integration directories
       inside the build location
+    - print banner on dependency resolution step
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 08:50:24 -0300
 
