--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-gem2deb (0.21) UNRELEASED; urgency=medium
+gem2deb (0.20.1) unstable; urgency=medium
 
   * gem2deb-test-runner:
     - use the API version number to point to rubygems-integration directories
       inside the build location
     - print banner on dependency resolution step
 
- -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 08:50:24 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 09:09:00 -0300
 
 gem2deb (0.20) unstable; urgency=medium
 
