--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.20.2) unstable; urgency=medium
+
+  * gem2deb-test-runner: include version-independent rubygems-integration
+    directories in GEM_PATH when checking dependencies.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 30 Jul 2015 09:24:33 -0300
+
 gem2deb (0.20.1) unstable; urgency=medium
 
   * gem2deb-test-runner:
