--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.20.3) UNRELEASED; urgency=medium
+
+  * dh_ruby: only ask questions interactively when called by gem2deb
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 31 Jul 2015 09:40:58 -0300
+
 gem2deb (0.20.2) unstable; urgency=medium
 
   * gem2deb-test-runner: include version-independent rubygems-integration
