--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.21) UNRELEASED; urgency=medium
 
   * dh_ruby: only ask questions interactively when called by gem2deb
   * dh-make-ruby: use debhelper compatibility level 9 by default
+  * gem2deb-test-runner: call `gem list` when dependency checking fails to
+    ease debugging
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 31 Jul 2015 09:40:58 -0300
 
