--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.21) UNRELEASED; urgency=medium
+gem2deb (0.21) unstable; urgency=medium
 
   * dh_ruby: only ask questions interactively when called by gem2deb
   * dh-make-ruby:
@@ -9,7 +9,7 @@ gem2deb (0.21) UNRELEASED; urgency=medium
   * gem2deb-test-runner: call `gem list` when dependency checking fails to
     ease debugging
 
- -- Antonio Terceiro <terceiro@debian.org>  Fri, 31 Jul 2015 09:40:58 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 18 Aug 2015 19:57:33 +0200
 
 gem2deb (0.20.2) unstable; urgency=medium
 
