--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.23) UNRELEASED; urgency=medium
+
+  * dh_ruby:
+    - take parameters from the $DH_RUBY environment variable
+
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 14:50:13 -0200
+
 gem2deb (0.22.1) unstable; urgency=medium
 
   * Skip integration tests during the build. When buildind only architecture
