--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gem2deb (0.22.1) unstable; urgency=medium
+
+  * Skip integration tests during the build. When buildind only architecture
+    independent packages (i.e. with dpkg-buildpackage -A or sbuild
+    --arch-all-only), the nested dpkg-buildpackage calls in the integration
+    tests will fail. We'll still run the integration tests under autopkgtest
+    though.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 16:39:24 -0200
+
 gem2deb (0.22) unstable; urgency=medium
 
   [ Pirate Praveen ]
