--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gem2deb (0.23) UNRELEASED; urgency=medium
+gem2deb (0.23) experimental; urgency=medium
 
   * dh_ruby:
     - take parameters from the $DH_RUBY environment variable
@@ -6,7 +6,7 @@ gem2deb (0.23) UNRELEASED; urgency=medium
     - allow options to be passed in any order
     - clarify usage message
 
- -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 14:50:13 -0200
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 13 Nov 2015 10:59:47 -0200
 
 gem2deb (0.22.1) unstable; urgency=medium
 
