gem installer: avoid installing the debian/

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.24) UNRELEASED; urgency=medium
+
+  * gem installer: avoid installing the debian/ directory when upstream
+    metadata specifies the packages files as '**/*'
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 20 Nov 2015 19:28:16 -0200
+
 gem2deb (0.23) experimental; urgency=medium
 
   * dh_ruby:
