--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ gem2deb (0.25.2) UNRELEASED; urgency=medium
     build with precedence over metadata already installed in the system. Fixes
     building packages on non-clean systems where the package you are building
     may have a version already installed.
+  * dh_ruby --gem-install:
+    - handle not installing test files when they are explicitly listed in the
+      gemspec under `spec.test_files = ...`.
 
  -- Antonio Terceiro <terceiro@debian.org>  Thu, 28 Jan 2016 10:17:02 -0200
 
