--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.26.2) UNRELEASED; urgency=medium
+
+  * dh-make-ruby: bump Standards-Version in generated debian/control files to
+    3.9.7
+
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 24 Feb 2016 14:47:23 -0300
+
 gem2deb (0.26.1) unstable; urgency=medium
 
   * metadata: resist gemspec.bindir not being a String (Closes: #814973)
