--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.26.2) UNRELEASED; urgency=medium
 
   * dh-make-ruby: bump Standards-Version in generated debian/control files to
     3.9.7
+  * gem_installer_test: fix assertion to check the right value when multiple
+    Ruby versions are enabled.
 
  -- Antonio Terceiro <terceiro@debian.org>  Wed, 24 Feb 2016 14:47:23 -0300
 
