--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-gem2deb (0.26.2) UNRELEASED; urgency=medium
+gem2deb (0.26.2) unstable; urgency=medium
 
   * dh-make-ruby: bump Standards-Version in generated debian/control files to
     3.9.7
   * gem_installer_test: fix assertion to check the right value when multiple
     Ruby versions are enabled.
 
- -- Antonio Terceiro <terceiro@debian.org>  Wed, 24 Feb 2016 14:47:23 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 26 Feb 2016 11:26:49 -0300
 
 gem2deb (0.26.1) unstable; urgency=medium
 
