--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-gem2deb (0.29) UNRELEASED; urgency=medium
+gem2deb (0.29) unstable; urgency=medium
 
   * gem2tgz:
     - Stop generating metadata.yml, and generate a .gemspec if there is no
       gemspec yet.
 
- -- Antonio Terceiro <terceiro@debian.org>  Fri, 04 Mar 2016 17:29:16 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 04 Mar 2016 18:50:17 -0300
 
 gem2deb (0.28) unstable; urgency=medium
 
