--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gem2deb (0.30) UNRELEASED; urgency=medium
+
+  * Gem2Deb::Metadata: workaround git usage in gemspecs. The fact that Debian
+    source packages are *not* git repositories makes it necessary to patch
+    upstream gemspec to drop usage of `git ls-files` in several packages. This
+    change makes gem2deb try to override that with sane defaults for a Debian
+    package.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Tue, 08 Mar 2016 10:24:48 +0700
+
 gem2deb (0.29) unstable; urgency=medium
 
   * gem2tgz:
