--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
 gem2deb (0.30) UNRELEASED; urgency=medium
 
-  * Gem2Deb::Metadata: workaround git usage in gemspecs. The fact that Debian
-    source packages are *not* git repositories makes it necessary to patch
-    upstream gemspec to drop usage of `git ls-files` in several packages. This
-    change makes gem2deb try to override that with sane defaults for a Debian
-    package. (Closes: #800933)
+  * Gem2Deb::Metadata:
+    - workaround git usage in gemspecs. The fact that Debian source packages
+      are *not* git repositories makes it necessary to patch upstream gemspec to
+      drop usage of `git ls-files` in several packages. This change makes
+      gem2deb try to override that with sane defaults for a Debian package.
+      (Closes: #800933)
+    - fail the build if there is a gemspec in the source package but we fail
+      to load it.
   * gem2deb-test-runner: when dependency resolution is requested, fail if
     there is no working source gemspec to read the package name from.
 
