--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.30.1) UNRELEASED; urgency=medium
+
+  * Gem2Deb::Metadata:
+    - make the workaround attempt for gemspecs using git more robust.
+
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 17 Mar 2016 10:23:58 -0300
+
 gem2deb (0.30) unstable; urgency=medium
 
   * Gem2Deb::Metadata:
