--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-gem2deb (0.30.1) UNRELEASED; urgency=medium
+gem2deb (0.30.1) unstable; urgency=medium
 
   * Gem2Deb::Metadata:
     - make the workaround attempt for gemspecs using git more robust.
   * Gem2Deb::Banner:
     - flush stdout immediately to improve output under autopkgtest
 
- -- Antonio Terceiro <terceiro@debian.org>  Thu, 17 Mar 2016 10:23:58 -0300
+ -- Antonio Terceiro <terceiro@debian.org>  Thu, 17 Mar 2016 11:42:36 -0300
 
 gem2deb (0.30) unstable; urgency=medium
 
