--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gem2deb (0.30.2) UNRELEASED; urgency=medium
+
+  * dh-make-ruby:
+    - replace mentions of `apt-file update` with `apt update`, following new
+      version of apt-file
+
+ -- Antonio Terceiro <terceiro@debian.org>  Fri, 25 Mar 2016 10:46:45 -0300
+
 gem2deb (0.30.1) unstable; urgency=medium
 
   * Gem2Deb::Metadata:
