--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.30.1~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+
+ -- Pirate Praveen <praveen@debian.org>  Sun, 10 Apr 2016 17:28:55 +0530
+
 gem2deb (0.30.1) unstable; urgency=medium
 
   * Gem2Deb::Metadata:
