--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
 gem2deb (0.30.2) UNRELEASED; urgency=medium
 
+  [ Antonio Terceiro ]
   * dh-make-ruby:
     - replace mentions of `apt-file update` with `apt update`, following new
       version of apt-file
   * gem2deb-test-runner:
     - make it explicit in the manpage that are options other than
       --autopkgtest
+
+  [ Christian Hofstaedtler ]
+  * Move build-essential to Recommends, easing cross-builds.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 25 Mar 2016 10:46:45 -0300
 
