--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ gem2deb (0.30.2) UNRELEASED; urgency=medium
 
   [ Christian Hofstaedtler ]
   * Move build-essential to Recommends, easing cross-builds.
+  * Move python3-debian to Recommends, easing cross-builds (only needed
+    for tests).
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 25 Mar 2016 10:46:45 -0300
 
