--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ gem2deb (0.30.2) UNRELEASED; urgency=medium
   * Move build-essential to Recommends, easing cross-builds.
   * Move python3-debian to Recommends, easing cross-builds (only needed
     for tests).
+  * Make packages Architecture: any to satisfy arch-correct Build-Depends
+    for cross-builds.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 25 Mar 2016 10:46:45 -0300
 
