--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gem2deb (0.30.3) UNRELEASED; urgency=medium
+
+  * test/unit/dh_ruby_test.rb: fix method that gets the list of binary
+    packages from source packages generated in the tests to not be influenced
+    by the dpkg-buildpackage invocation used to build gem2deb
+    (Closes: #826674)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sun, 12 Jun 2016 14:23:34 -0300
+
 gem2deb (0.30.2) unstable; urgency=medium
 
   [ Antonio Terceiro ]
