--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gem2deb (0.33) UNRELEASED; urgency=medium
+
+  * Gem2Deb::Metadata. Parse timestamp as Date insted of Time. Fixes test
+    suite on jessie (Closes: #835588)
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 27 Aug 2016 12:37:40 -0300
+
 gem2deb (0.32) unstable; urgency=medium
 
   * --gem-install: append new directories to the whitelist from the
