gem2deb-test-runner: fix documentation of $GEM2DEB_TEST_RUNNER in manpage

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gem2deb (0.33) UNRELEASED; urgency=medium
 
   * Gem2Deb::Metadata. Parse timestamp as Date insted of Time. Fixes test
     suite on jessie (Closes: #835588)
+  * gem2deb-test-runner:
+    - fix documentation of $GEM2DEB_TEST_RUNNER in manpage
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 27 Aug 2016 12:37:40 -0300
 
