Gem2Deb::GemInstaller: skip lib/ cleanup when there is no lib/

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ gem2deb (0.33) UNRELEASED; urgency=medium
     suite on jessie (Closes: #835588)
   * gem2deb-test-runner:
     - fix documentation of $GEM2DEB_TEST_RUNNER in manpage
+  * Gem2Deb::GemInstaller
+    - don't try to remove empty directories from lib/ if there is no lib/
 
   [ Stefano Rivera ]
   * gem2deb-test-runner: Add Build-Dep on dpkg-dev. Autopkgtests may use this,
