--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-gem2deb (0.33.1) UNRELEASED; urgency=medium
+gem2deb (0.33.1) unstable; urgency=medium
 
   * Gem2Deb::GemInstaller:
     - don't install extra_rdoc_files
     - don't install examples/*
 
- -- Antonio Terceiro <terceiro@debian.org>  Wed, 07 Dec 2016 14:41:06 -0200
+ -- Antonio Terceiro <terceiro@debian.org>  Wed, 07 Dec 2016 14:47:07 -0200
 
 gem2deb (0.33) unstable; urgency=medium
 
