--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ gem2deb (0.33.2) UNRELEASED; urgency=medium
   [ Antonio Terceiro ]
   * Fix most Ruby warning in the code. They were exposed by rake 12.0.0, which
     runs tests with warnings enabled by default.
+  * dh-make-ruby:
+    - Bump Standards-Version in produced packages to 4.0.0
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 19 May 2017 10:28:28 -0300
 
