--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gem2deb (0.35) UNRELEASED; urgency=medium
+
+  * dh-make-ruby: bump debian/compat template to 10
+
+ -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jul 2017 19:46:54 -0300
+
 gem2deb (0.34) unstable; urgency=medium
 
   [ Dominic Cleal ]
