--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ gem2deb (0.35) UNRELEASED; urgency=medium
   * dh-make-ruby: bump debian/compat template to 10 (Closes: #867741)
   * Gem2Deb::Metadata:
     - use debian/gemspec as gemspec if it exists (Closes: #867739)
+  * gem2deb, dh-make-ruby: add -o/--offline option to prevent any access to
+    the internet (including but not limited to checking wnpp)
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jul 2017 19:46:54 -0300
 
